syntax = "proto3";

package common.v1;

option go_package = "commonv1";

// ResourceRef represents a reference to a resource with a UID and name.
message ResourceRef {
  // UID is the unique identifier of the resource.
  string uid = 1;

  // Name is the human-readable name of the resource.
  string name = 2;
}